--- a/0x02-react_intro/task_2/dashboard/src/App.css
+++ b/0x02-react_intro/task_2/dashboard/src/App.css
@@ -24,16 +24,22 @@
     padding-top: 50px;
     border-top: solid #e0354b 3px;
     border-bottom: solid #e0354b 3px;
-    margin-left: 15px;
+    text-align: left;
     margin-right: 15px;
     height: 45vh;
  }
 
  .App-body > p{
-   text-align: left;
-   margin-left: 53px;
-   font-weight: 500;
+  
+   font-weight: bold;
    color: #212121;
+ }
+
+ .App-body > input, label{
+   margin-right: 10px;
+ }
+ input,label{
+   font-weight:bold;
  }
 
  .App-footer > p{
